Migrate to Java 11
Signed-off-by: Alexander Falkenstern <alexander.falkenstern@gmail.com>